Reduce usage of java.net.URI in the HID class because of increasing problems with RFC 2396 vs RFC 3986 URIs
This also consolidates the `from` methods to one `from(Object)` method to be consistent with other value objects and normalizes the scheme values to lower case ASCII.